<resources>
    <string name="app_name">Погода</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_info">Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_info">Info</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_choose_city">Choose City</string>
    <string name="menu_catalog">Catalog</string>

    <string name="wait">Wait</string>
    <string name="btn_run">Run service</string>
    <string name="btn_get_weather">Get weather</string>
    <string name="btn_get_next_weather">Get next weather</string>
    <string name="btn_get_location_weather">Local weather</string>
    <string name="city_hint">City,country</string>
    <string name="def_text">Pushkino</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="celsius_degree"> °C</string>
    <string name="lon">Lon:  </string>
    <string name="lat">Lat:  </string>
</resources>
